add docs for indexing